tests/valid/v07_before_syntax.tsl
# VALID TEST 7: BEFORE dependency syntax
# Tests: BEFORE <identifier>

TASK prepareEnv {
    RUN "prepare.sh"
    BEFORE deployApp
}

TASK deployApp {
    RUN "deploy.sh"
    EVERY DAY AT 08:00
}
